--- a/robotour/app/src/main/res/values/strings.xml
+++ b/robotour/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">robotour</string>
+    <string name="app_name">RoboTour</string>
     <string name="title_activity_destination">Destination</string>
     <string name="title_activity_ride_share">RideShare</string>
     <string name="MainActivity_curLoc">Use Current Location</string>
     <string name="MainActivity_hint_search">Enter your location</string>
+    <string name="Destination_txt_filter">Filter by - </string>
     <string name="Destination_btn_randomize">Randomize</string>
     <string name="Destination_txt_information">Temporary Changeable data</string>
     <string name="Destination_btn_bookRide">Book me the ride</string>
@@ -14,5 +15,6 @@
     <string-array name="filters">
         <item>Food</item>
         <item>Sightseeing</item>
+        <item>None</item>
     </string-array>
 </resources>
